# tts-script-tool

./: .gitignore  Cargo.toml  README.md
scripts/: Bar.ttslua  test.ttslua
src/: api.rs  app.rs  error.rs  lib.rs  macros.rs  main.rs  messages.rs  object.rs  objects.rs  save.rs  script_states.rs  tags.rs  tcp.rs
