[package]
name = "ttsst"
version = "0.1.0"
edition = "2021"
authors = ["LucasOe"]
description = "Attach and update scripts in Tabletop Simulator via the command line."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
colorize = "0.1.0"
inquire = "0.3.0"
regex = "1.6.0"
serde_json = "1.0"
snailquote = "0.3.1"
