[package]
name = "ttsst"
version = "0.1.0"
edition = "2021"
authors = ["LucasOe"]
description = "Attach and update scripts in Tabletop Simulator via the command line."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colorize = "0.1.0"
derive_more = "0.99.17"
inquire = "0.5.3"
notify-debouncer-mini = "0.2.1"
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
snailquote = "0.3.1"
thiserror = "1.0.38"
tts-external-api = "0.1.4"
